Refactor : 상권 점수 성능 개선 리펙토링